# system_prog

./: .gitignore
lab1/: CMakeLists.txt
lab1/task1/: 123.txt  functions.c  functions.h  main.c
lab1/task2/: main.c
lab1/task3/: main.c
lab1/task4/: client  client.c  common.h  fail1  fail2  server  server.c  sol1.txt  sol2.txt
lab1/task5/: main.c
lab1/task6/: Makefile  client  client.c  common.h  server  server.c
lab1/task7/: main.c
lab2/task1/: CMakeLists.txt  main.cpp
lab2/task1/include/: ConsoleLogHandler.h  FileLogHandler.h  LogHandler.h  Logger.h
lab2/task1/src/: ConsoleLogHandler.cpp  FileLogHandler.cpp  Logger.cpp
lab2/task2/include/: LogGenerator.h  SafeQueue.h
lab2/task4/: CMakeLists.txt  main.cpp
lab2/task4/include/: Logger.hpp
lab2/task4/src/: Logger.cpp
lab3/: CMakeLists.txt
lab3/client/: CMakeLists.txt  example.tex
lab3/client/include/: client.hpp
lab3/client/src/: client.cpp  main.cpp
lab3/server/: CMakeLists.txt
lab3/server/include/: server.hpp
lab3/server/src/: main.cpp  server.cpp
lab3/subprocesses/: CMakeLists.txt
lab3/subprocesses/compiler/: CMakeLists.txt
lab3/subprocesses/compiler/include/: compiler.hpp
lab3/subprocesses/compiler/include/utils/: compile_cpp.sh  compile_tex.sh
lab3/subprocesses/compiler/src/: compiler.cpp  main.cpp
lab3/subprocesses/sticks_game/: CMakeLists.txt
lab3/subprocesses/sticks_game/include/: sticks_game.hpp
lab3/subprocesses/sticks_game/src/: main.cpp  sticks_game.cpp
lab3/utils/: CMakeLists.txt
lab3/utils/exceptions/: CMakeLists.txt
lab3/utils/exceptions/include/: custom_exceptions.hpp
lab3/utils/exceptions/src/: custom_exceptions.cpp
lab3/utils/logger/: CMakeLists.txt
lab3/utils/logger/include/: logger.hpp
lab3/utils/logger/src/: logger.cpp
lab3/utils/message_queue/: CMakeLists.txt
lab3/utils/message_queue/include/: client_message_queue.hpp  game_message.hpp  server_message_queue.hpp
lab3/utils/message_queue/src/: client_message_queue.cpp  server_message_queue.cpp
lab3/utils/semaphore/: CMakeLists.txt
lab3/utils/semaphore/include/: semaphore.hpp
lab3/utils/semaphore/src/: semaphore.cpp
lab3/utils/shared_memory/: CMakeLists.txt
lab3/utils/shared_memory/include/: compilation_shared_data.hpp  shared_memory.hpp
lab3/utils/shared_memory/src/: shared_memory.cpp
lab3/utils/tcp/client/: CMakeLists.txt
lab3/utils/tcp/client/include/: TCPClient.hpp
lab3/utils/tcp/client/src/: TCPClient.cpp
lab3/utils/tcp/server/: CMakeLists.txt
lab3/utils/tcp/server/include/: TCPServer.hpp
lab3/utils/tcp/server/src/: TCPServer.cpp
